Add librares: bootstrap, IDE-helper. Working on view Project/Create

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -42,5 +42,11 @@
       "in_progress": "В процессе",
       "completed": "Завершен"
     }
+  },
+  "create": "Создать новый проект",
+  "buttons": {
+    "create": "Создать",
+    "edit": "Изменить",
+    "delete": "Удалить"
   }
 }
