Added: Create project without images

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,7 @@
     "created_at": "Дата создания",
     "updated_at": "Дата обновления",
     "due_date": "Срок выполнения",
+    "description": "Описание проекта",
     "createdBy": {
       "id": "ID пользователя",
       "name": "Кем создан",
@@ -48,5 +49,15 @@
     "create": "Создать",
     "edit": "Изменить",
     "delete": "Удалить"
+  },
+  "links": {
+    "toProjects": "Вернуться к проектам"
+  },
+  "form": {
+    "name": "Введите название",
+    "image": "Загрузите изображение",
+    "status": "Выберите статус",
+    "description": "Заполните описание",
+    "due_date": "Выберите дату"
   }
 }
