Added Update and Delete for projects

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,6 +45,7 @@
     }
   },
   "create": "Создать новый проект",
+  "edit": "Изменить созданный проект",
   "buttons": {
     "create": "Создать",
     "edit": "Изменить",
