Fixed: all problems related with tcs compilation

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,7 +45,7 @@
     }
   },
   "create": "Создать новый проект",
-  "edit": "Изменить созданный проект",
+  "edit": "Изменить проект",
   "buttons": {
     "create": "Создать",
     "edit": "Изменить",
