Added CRUD of users

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,6 +27,22 @@
       "completed": "Завершен"
     }
   },
+  "user": {
+    "id": "ID",
+    "header": "Все пользователи",
+    "image": "Аватар",
+    "email": "Email",
+    "name": "Имя пользователя",
+    "created_at": "Дата создания",
+    "updated_at": "Дата обновления",
+    "actions": "Задачи",
+    "projectStatus": {
+      "nothing": "",
+      "pending": "Отменен",
+      "in_progress": "В процессе",
+      "completed": "Завершен"
+    }
+  },
   "task": {
     "id": "ID",
     "header": "Мои задачи",
@@ -44,7 +60,11 @@
       "completed": "Завершен"
     }
   },
-  "create": "Создать новый проект",
+  "create": {
+    "project": "Создать проект",
+    "task": "Создать задачу",
+    "user": "Создать пользователя"
+  },
   "edit": "Изменить проект",
   "buttons": {
     "create": "Создать",
@@ -55,8 +75,15 @@
     "toProjects": "Вернуться к проектам"
   },
   "form": {
-    "name": "Введите название",
+    "name": {
+      "task": "Введите название задачи",
+      "project": "Введите название проекта",
+      "user": "Имя пользователя"
+    },
     "image": "Загрузите изображение",
+    "email": "Введите Email",
+    "password": "Введите пароль",
+    "password_confirmation": "Повторно введите пароль",
     "status": "Выберите статус",
     "description": "Заполните описание",
     "due_date": "Выберите дату"
