Added: States, Image Downloads

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -69,7 +69,9 @@
   "buttons": {
     "create": "Создать",
     "edit": "Изменить",
-    "delete": "Удалить"
+    "delete": "Удалить",
+    "toBanned": "Забанить",
+    "toActive": "Активировать"
   },
   "links": {
     "toProjects": "Вернуться к проектам"
